[WIP] JVMCI integration